# quizmaster_mvp

./: .dockerignore  .gitignore  AWS.Lambda.Dockerfile  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.helix/: languages.toml
apps/quiz/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_auth.py
apps/quiz/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Routes.tsx  types.ts
frontend/src/components/: Navbar.tsx  PrivateRoute.tsx  ProtectedRoute.tsx  QuizCard.tsx  QuizDetails.tsx
frontend/src/data/: quizzes.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx  QuizPage.tsx
frontend/src/services/: index.ts
scripts/: crawl.py
