[project]
name = "val-quiz"
version = "0.1.0"
description = "a test project for valearnis quiz platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.4.247",
    "daphne>=4.1.2",
    "django>=5.1.5",
    "django-cors-headers>=4.6.0",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "mangum>=0.19.0",
    "markdown>=3.7",
    "pydantic-ai>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
]
